Criacao da insercao de dados

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
             <div id="aviso" class="text-danger text-center"></div>
         </form>
     </main>
-    <script src="./js/scripts.js"></script>
+    <script src="./js/script.js"></script>
 <!-- Code injected by live-server -->
 <script>
 	// <![CDATA[  <-- For SVG support
