--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -30,6 +30,11 @@
             <button id="btnAdicionar" class="btn btn-primary" onclick="adicionarProduto()">Adicionar Produto</button>
         </div>
     </div>
+
+    <!-- Inclua os scripts corretos do Bootstrap 5 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/produtos.js"></script>
 </body>
 </html>
