--- a/pages/editaProduto.html
+++ b/pages/editaProduto.html
@@ -1,45 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editar Produto</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-    <div class="container mt-5">
-        <h1>Editar Produto</h1>
-        <form id="produto-form">
-            <div class="form-group">
-                <label for="nome_produto">Nome do Produto</label>
-                <input type="text" class="form-control" id="nome_produto" name="nome_produto">
+<body class="bg-body-tertiary">
+    <div class="d-flex">
+        <!-- Menu Lateral -->
+        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 250px; min-height: 100vh;">
+            <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">Nome Usuario</h4>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a href="produtos.html" class="nav-link text-white">Produtos</a>
+                </li>
+                <li>
+                    <a href="configurar_produtos.html" class="nav-link text-white">Configurar Produtos</a>
+                </li>
+                <li>
+                    <a href="etapas.html" class="nav-link text-white">Etapas</a>
+                </li>
+                <li>
+                    <a href="configurar_etapas.html" class="nav-link text-white">Configurar Etapas</a>
+                </li>
+                <li>
+                    <a href="estoque.html" class="nav-link text-white">Estoque Disponível</a>
+                </li>
+            </ul>
+            <hr>
+            <div>
+                <a href="logout.html" class="nav-link text-danger">Sair</a>
             </div>
-            <div class="form-group">
-                <label for="tamanho_produto">Tamanho</label>
-                <input type="text" class="form-control" id="tamanho_produto" name="tamanho_produto">
-            </div>
-            <div class="form-group">
-                <label for="cor_produto">Cor</label>
-                <input type="text" class="form-control" id="cor_produto" name="cor_produto">
-            </div>
-            <div class="form-group">
-                <label for="preco_produto">Preço</label>
-                <input type="text" class="form-control" id="preco_produto" name="preco_produto">
-            </div>
-            <div class="form-group">
-                <label for="quantidade_produto">Quantidade</label>
-                <input type="text" class="form-control" id="quantidade_produto" name="quantidade_produto">
-            </div>
-            <div class="form-group">
-                <label for="n_lote">Número do Lote</label>
-                <input type="text" class="form-control" id="n_lote" name="n_lote">
-            </div>
-            <div class="form-group">
-                <label for="data_criacao">Data de Criação</label>
-                <input type="text" class="form-control" id="data_criacao" name="data_criacao" disabled>
-            </div>
-            <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-        </form>
+        </nav>
+
+        <!-- Conteúdo Principal -->
+        <div class="container my-5">
+            <h1>Editar Produto</h1>
+            <form id="produto-form">
+                <div class="form-group">
+                    <label for="nome_produto">Nome do Produto</label>
+                    <input type="text" class="form-control" id="nome_produto" name="nome_produto">
+                </div>
+                <div class="form-group">
+                    <label for="tamanho_produto">Tamanho</label>
+                    <input type="text" class="form-control" id="tamanho_produto" name="tamanho_produto">
+                </div>
+                <div class="form-group">
+                    <label for="cor_produto">Cor</label>
+                    <input type="text" class="form-control" id="cor_produto" name="cor_produto">
+                </div>
+                <div class="form-group">
+                    <label for="preco_produto">Preço</label>
+                    <input type="text" class="form-control" id="preco_produto" name="preco_produto">
+                </div>
+                <div class="form-group">
+                    <label for="quantidade_produto">Quantidade</label>
+                    <input type="text" class="form-control" id="quantidade_produto" name="quantidade_produto">
+                </div>
+                <div class="form-group">
+                    <label for="n_lote">Número do Lote</label>
+                    <input type="text" class="form-control" id="n_lote" name="n_lote">
+                </div>
+                <div class="form-group">
+                    <label for="data_criacao">Data de Criação</label>
+                    <input type="text" class="form-control" id="data_criacao" name="data_criacao" disabled>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary mt-2">Salvar Alterações</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script>
