--- a/pages/estoque.html
+++ b/pages/estoque.html
@@ -6,27 +6,57 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Produtos em Estoque</title>
 </head>
-<body>
-    <div class="container my-5">
-        <h1 class="mb-4">Produtos em Estoque</h1>
+<body class="bg-body-tertiary">
+    <div class="d-flex">
+        <!-- Menu Lateral -->
+        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 250px; min-height: 100vh;">
+            <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">Nome Usuario</h4>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a href="produtos.html" class="nav-link text-white">Produtos</a>
+                </li>
+                <li>
+                    <a href="configurar_produtos.html" class="nav-link text-white">Configurar Produtos</a>
+                </li>
+                <li>
+                    <a href="etapas.html" class="nav-link text-white">Etapas</a>
+                </li>
+                <li>
+                    <a href="configurar_etapas.html" class="nav-link text-white">Configurar Etapas</a>
+                </li>
+                <li>
+                    <a href="estoque.html" class="nav-link text-white">Estoque Disponível</a>
+                </li>
+            </ul>
+            <hr>
+            <div>
+                <a href="logout.html" class="nav-link text-danger">Sair</a>
+            </div>
+        </nav>
 
-        <div class="d-flex justify-content-between mb-3">
-            <button class="btn btn-primary" onclick="adicionarProduto()">Adicionar Produto</button>
+        <!-- Conteúdo Principal -->
+        <div class="container my-5">
+            <h1 class="mb-4">Produtos em Estoque</h1>
+
+            <div class="d-flex justify-content-between mb-3">
+                <button class="btn btn-primary" onclick="adicionarProduto()">Adicionar Produto</button>
+            </div>
+
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID Material</th>
+                        <th>Nome do Material</th>
+                        <th>Quantidade</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="productTableBody">
+                    <!-- Os produtos serão adicionados dinamicamente aqui -->
+                </tbody>
+            </table>
         </div>
-
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID Material</th>
-                    <th>Nome do Material</th>
-                    <th>Quantidade</th>
-                    <th>Ações</th>
-                </tr>
-            </thead>
-            <tbody id="productTableBody">
-                <!-- Os produtos serão adicionados dinamicamente aqui -->
-            </tbody>
-        </table>
     </div>
 
     <script>
@@ -72,8 +102,7 @@
         }
 
         function editarProduto(id) {
-            // Lógica para editar produto (pode redirecionar para outra página ou abrir um modal)
-            window.location.href = `/editar-produto?id=${id}`; // Exemplo de redirecionamento para outra página com ID do produto
+            window.location.href = `/editar-produto?id=${id}`; 
         }
     </script>
 </body>
