--- a/pages/etapasProduto.html
+++ b/pages/etapasProduto.html
@@ -6,28 +6,55 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Lista de Etapas do Produto</title>
 </head>
-<body>
-    <div class="container my-5">
-        <h1 class="mb-4">Etapas do Produto</h1>
-        
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>ID Etapa</th>
-                    <th>Nome da Etapa</th>
-                    <th>Material</th>
-                    <th>Quantidade de Material</th>
-                    <th>Tempo Necessário</th>
-                </tr>
-            </thead>
-            <tbody id="etapasTableBody">
-                <!-- As etapas serão adicionadas dinamicamente aqui -->
-            </tbody>
-        </table>
+<body class="bg-body-tertiary">
+    <div class="d-flex">
+        <!-- Menu Lateral -->
+        <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 250px; min-height: 100vh;">
+            <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">Nome Usuario</h4>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a href="produtos.html" class="nav-link text-white">Produtos</a>
+                </li>
+                <li>
+                    <a href="configurar_produtos.html" class="nav-link text-white">Configurar Produtos</a>
+                </li>
+                <li>
+                    <a href="etapas.html" class="nav-link text-white">Etapas</a>
+                </li>
+                <li>
+                    <a href="configurar_etapas.html" class="nav-link text-white">Configurar Etapas</a>
+                </li>
+            </ul>
+            <hr>
+            <div>
+                <a href="logout.html" class="nav-link text-danger">Sair</a>
+            </div>
+        </nav>
 
-        <div class="d-flex justify-content-between mt-4">
-            <button class="btn btn-secondary" onclick="voltarPagina()">Voltar</button>
-            <button class="btn btn-primary" onclick="adicionarEtapa()">Adicionar Etapa</button>
+        <!-- Conteúdo Principal -->
+        <div class="container my-5">
+            <h1 class="mb-4">Etapas do Produto</h1>
+            
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>ID Etapa</th>
+                        <th>Nome da Etapa</th>
+                        <th>Material</th>
+                        <th>Quantidade de Material</th>
+                        <th>Tempo Necessário</th>
+                    </tr>
+                </thead>
+                <tbody id="etapasTableBody">
+                    <!-- As etapas serão adicionadas dinamicamente aqui -->
+                </tbody>
+            </table>
+
+            <div class="d-flex justify-content-between mt-4">
+                <button class="btn btn-secondary" onclick="voltarPagina()">Voltar</button>
+                <button class="btn btn-primary" onclick="adicionarEtapa()">Adicionar Etapa</button>
+            </div>
         </div>
     </div>
 
