--- a/pages/adicionarEtapa.html
+++ b/pages/adicionarEtapa.html
@@ -4,48 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Cadastro de Etapa</title>
     <link href="./css/style.css" rel="stylesheet">
 </head>
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
-    <main class="w-100 m-auto form-container">
-        <form id="etapaForm" method="POST">
-            <h1 class="h3 d-flex mb-3 fw-normal justify-content-center align-items-center">Cadastro de Etapa</h1>
-            
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingNomeEtapa" placeholder="Nome da Etapa" name="nome_etapa" required>
-                <label for="floatingNomeEtapa">Nome da Etapa</label>
-            </div>
+<body class="d-flex">
+    <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 250px; min-height: 100vh;">
+        <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">Nome Usuario</h4>
+        <hr>
+        <ul class="nav nav-pills flex-column mb-auto">
+            <li class="nav-item">
+                <a href="produtos.html" class="nav-link text-white">Produtos</a>
+            </li>
+            <li>
+                <a href="configurar_produtos.html" class="nav-link text-white">Configurar Produtos</a>
+            </li>
+            <li>
+                <a href="etapas.html" class="nav-link text-white">Etapas</a>
+            </li>
+            <li>
+                <a href="configurar_etapas.html" class="nav-link text-white">Configurar Etapas</a>
+            </li>
+        </ul>
+        <hr>
+        <div>
+            <a href="logout.html" class="nav-link text-danger">Sair</a>
+        </div>
+    </nav>
 
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingMaterial" placeholder="Material Necessário" name="material_x" required>
-                <label for="floatingMaterial">Material Necessário</label>
-            </div>
+    <main class="container-fluid d-flex justify-content-center align-items-center p-4">
+        <div class="w-50">
+            <form id="etapaForm" method="POST">
+                <h1 class="h3 mb-3 fw-normal text-center">Cadastro de Etapa</h1>
 
-            <div class="form-floating mb-3">
-                <input type="number" class="form-control" id="floatingQuantidadeMaterial" placeholder="Quantidade de Material" name="quantidade_material_x" required>
-                <label for="floatingQuantidadeMaterial">Quantidade de Material</label>
-            </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingNomeEtapa" placeholder="Nome da Etapa" name="nome_etapa" required>
+                    <label for="floatingNomeEtapa">Nome da Etapa</label>
+                </div>
 
-            <div class="form-floating mb-3">
-                <input type="time" class="form-control" id="floatingTempoNecessario" placeholder="Tempo Necessário" name="tempo_necessario" required>
-                <label for="floatingTempoNecessario">Tempo Necessário</label>
-            </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingMaterial" placeholder="Material Necessário" name="material_x" required>
+                    <label for="floatingMaterial">Material Necessário</label>
+                </div>
 
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingProduto" name="produto_selecionado" disabled>
-                <label for="floatingProduto">Produto Selecionado</label>
-            </div>
+                <div class="form-floating mb-3">
+                    <input type="number" class="form-control" id="floatingQuantidadeMaterial" placeholder="Quantidade de Material" name="quantidade_material_x" required>
+                    <label for="floatingQuantidadeMaterial">Quantidade de Material</label>
+                </div>
 
-            <input type="hidden" name="fk_produto_id_produto" id="produtoId">
+                <div class="form-floating mb-3">
+                    <input type="time" class="form-control" id="floatingTempoNecessario" placeholder="Tempo Necessário" name="tempo_necessario" required>
+                    <label for="floatingTempoNecessario">Tempo Necessário</label>
+                </div>
 
-            <button id="btnCadastrarEtapa" class="btn btn-outline-primary w-100 py-2" onclick="enviaEtapa(event)">Cadastrar</button>
-            <button class="btn btn-outline-secondary w-100 py-2 mt-2" onclick="voltar()">Voltar</button>
-            <div id="aviso" class="text-danger text-center"></div>
-        </form>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingProduto" name="produto_selecionado" disabled>
+                    <label for="floatingProduto">Produto Selecionado</label>
+                </div>
+
+                <input type="hidden" name="fk_produto_id_produto" id="produtoId">
+
+                <div class="d-flex flex-column gap-2">
+                    <button id="btnCadastrarEtapa" class="btn btn-outline-primary w-100 py-2" onclick="enviaEtapa(event)">Cadastrar</button>
+                    <button class="btn btn-outline-secondary w-100 py-2" onclick="voltar()">Voltar</button>
+                </div>
+
+                <div id="aviso" class="text-danger text-center mt-2"></div>
+            </form>
+        </div>
     </main>
+
     <script src="js/script.js"></script>
     <script>
         // Função para voltar para a página anterior
