Correcao no menu lateral

--- a/pages/adicionarProdEstoque.html
+++ b/pages/adicionarProdEstoque.html
@@ -9,20 +9,17 @@
 <body>
     <div class="d-flex">
         <nav class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" style="width: 250px; min-height: 100vh;">
-            <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white">Nome Usuario</h4>
+            <h4 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white"><a href="dashboard.html" style="color: inherit; text-decoration: none;">FENI</a></h4>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
+                <li>
+                    <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
+                </li>
                 <li class="nav-item">
                     <a href="produtos.html" class="nav-link text-white">Produtos</a>
                 </li>
                 <li>
-                    <a href="configurar_produtos.html" class="nav-link text-white">Configurar Produtos</a>
-                </li>
-                <li>
-                    <a href="etapas.html" class="nav-link text-white">Etapas</a>
-                </li>
-                <li>
-                    <a href="configurar_etapas.html" class="nav-link text-white">Configurar Etapas</a>
+                    <a href="estoque.html" class="nav-link text-white">Estoque</a>
                 </li>
             </ul>
             <hr>
