Editar e Excluir estoque

--- a/pages/adicionarProdEstoque.html
+++ b/pages/adicionarProdEstoque.html
@@ -71,7 +71,7 @@
 
                 if (response.ok) {
                     alert('Produto adicionado com sucesso!');
-                    window.location.href = '/lista-produtos'; // Redireciona para a lista de produtos
+                    window.location.href = 'estoque.html'; // Redireciona para a lista de produtos
                 } else {
                     alert('Erro ao adicionar produto.');
                 }
