feito correcoes nas telas e falta logica falta logica das etapas, correcoes nas telas adicionar etapa e produtos

--- a/pages/adicionarEtapa.html
+++ b/pages/adicionarEtapa.html
@@ -131,7 +131,7 @@
                             //Erro esta aq, Rever logica
                             option.value = material.nome_material;
                             // console.log('opcoes', option.value);
-                            option.textContent = `${material.nome_material} - ${material.quantidade_disponivel} unidades`;
+                            option.textContent = `${material.nome_material} - ${material.quantidade_material} unidades`;
                             select.appendChild(option);
                         });
 
