--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -40,8 +40,7 @@
                         <th scope="col">Nome do Produto</th>
                         <th scope="col">Tamanho</th>
                         <th scope="col">Cor</th>
-                        <th scope="col">Preço</th>
-                        <th scope="col">Quantidade</th>
+                        <th scope="col">Etapa Atual</td>
                         <th scope="col">Ações</th>
                     </tr>
                 </thead>
